samples/_failures_safe/1761258283_5223e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da3e4bc7.c: In function ‘main’:
./samples/SAFE/__tmp_da3e4bc7.c:150:5: error: expected declaration or statement at end of input
  150 |     }
      |     ^
